# human-insight-from-contexts

./: .gitignore  ARCHITECTURE_INPUT.md  DESIGN.md  PROJECT_STATUS.md  README.md  REQUIREMENTS_HANDOFF.md  pyproject.toml
.github/workflows/: ci.yml
data/persons/naval-ravikant/evidence/: evidence.jsonl
data/persons/naval-ravikant/persona/: persona-v1.json  persona-v1.md
data/persons/naval-ravikant/sources/: src-178fc46da3e78665.json  src-99823848e336303d.json
herdr/: README.md
herdr/prompts/: architect.md  developer1.md  developer2.md  developer3.md  end_user.md  orchestrator.md  requirements.md  reviewer.md  reviewer2.md  reviewer3.md  tester.md
herdr/scripts/: setup-herdr-workspace.sh
hifc/: __init__.py
hifc/cli/: app.py  ingest.py  persona.py
hifc/extract/: __init__.py  pipeline.py
hifc/ingest/: __init__.py  build.py  chunking.py  csv_source.py  errors.py  file_source.py  url_source.py  youtube_source.py
hifc/llm/: __init__.py  backend.py  json_utils.py
hifc/persona/: __init__.py  build.py  explain.py  render.py  synthesize.py
hifc/prompts/persona/: __init__.py  extract_prompt.py  rubrics.py  synthesize_prompt.py
hifc/schemas/: __init__.py  analysis.py  common.py  persona.py  source.py
hifc/scoring/: __init__.py  confidence.py  weights.yaml
hifc/storage/: __init__.py  hashing.py  repository.py
tests/: conftest.py  test_cli.py  test_cli_ingest_persona.py  test_extract.py  test_ingest.py  test_llm.py  test_persona_build.py  test_persona_explain.py  test_persona_synthesize.py  test_schemas.py  test_scoring.py  test_storage.py
