[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hifc"
version = "0.1.0"
description = "Human insight from contexts MVP foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "pyyaml>=6.0,<7",
  "httpx>=0.27,<1",
  "trafilatura>=1.9,<2",
  "pdfplumber>=0.11,<1",
  "youtube-transcript-api>=0.6,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
hifc = "hifc.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["hifc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

